# prml-nb

./: .envrc  pyproject.toml
chapter1/: 1.1.ipynb  1.11.ipynb  1.12.ipynb  1.16.ipynb  1.18.ipynb  1.2.ipynb  1.4.ipynb  1.5.ipynb  1.6.ipynb  1.7.ipynb  1.8.ipynb  1.9.ipynb
