[tool.poetry]
name = "prml-nb"
version = "0.1.0"
description = ""
authors = ["Queensferry <queensferry.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.0.9"
numpy = "^1.20.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
